# amphibious_ws

./: demo_mecanum_package.sh  validate_mecanum_package.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/base/share/base/: local_setup.sh  package.dsv  package.ps1  package.sh
install/base/share/base/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  base__rosidl_typesupport_cExport.cmake  base__rosidl_typesupport_cppExport.cmake  base__rosidl_typesupport_introspection_cExport-noconfig.cmake  base__rosidl_typesupport_introspection_cppExport-noconfig.cmake  base__rosidl_typesupport_introspection_cppExport.cmake  export_base__rosidl_generator_cExport-noconfig.cmake  export_base__rosidl_generator_cExport.cmake  export_base__rosidl_generator_pyExport-noconfig.cmake  export_base__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_base__rosidl_typesupport_fastrtps_cExport.cmake  export_base__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/base_lidar/share/base_lidar/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/base_lidar/share/base_lidar/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  base_lidar__rosidl_typesupport_cExport.cmake  base_lidar__rosidl_typesupport_cppExport-noconfig.cmake  (+9 more)
install/bluesea2/lib/bluesea2/: bluesea2_client  bluesea2_heart_check  bluesea2_node
install/bluesea2/share/bluesea2/: package.sh
install/camera_pkg/lib/camera_pkg/: camera_pub
install/camera_pkg/share/camera_pkg/: local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
install/com_pkg/lib/com_pkg/: com_node  com_node_without_imu
install/com_pkg/share/com_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/i2c_pkg/lib/i2c_pkg/: car_drive  car_drive_pid  car_drive_pid_pwm  car_drive_pid_pwm_lifecycle  pid  pid_lifecycle  pid_velocity  pid_velocity_lifecycle  target_pub  velocity_by_encoder  velocity_by_encoder_lifecycle
install/i2c_pkg/share/i2c_pkg/: local_setup.sh  package.bash  package.ps1  package.sh  package.xml  package.zsh
install/item_locate_pkg/lib/item_locate_pkg/: item_locate_node
install/item_locate_pkg/share/item_locate_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/lifecycle_control_pkg/share/lifecycle_control_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_carto_pkg/share/my_carto_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/yolo_detect_pkg/lib/yolo_detect_pkg/: yolo11_detect  yolo11_detect_lifecycle  yolo_detect
install/yolo_detect_pkg/share/yolo_detect_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
scripts/: amp_start.sh
src/activity_controller/: CMakeLists.txt  package.xml
src/activity_controller/src/: rescue_task.cpp  rescue_task_test.cpp  rescue_task_test2.cpp  rescur_task_test3.cpp
src/amp_interfaces/: CMakeLists.txt  package.xml
src/amp_interfaces/msg/: TargetPosition.msg
src/amp_interfaces/srv/: SetTarget.srv
src/amp_launch_pkg/: CMakeLists.txt  package.xml
src/amp_launch_pkg/launch/: car_driver_test.launch.py  pid_test.launch.py  rescue_task_test.launch.py  rescue_task_test2.launch.py  rescue_task_test3.launch.py
src/camera_pkg/: CMakeLists.txt  package.xml
src/camera_pkg/src/: camera_pub.cpp  camera_pub_lifecycle.cpp  fov_measure.cpp  people_locate.cpp
src/car_driver/: CMakeLists.txt  package.xml
src/car_driver/src/: car_driver.cpp  wheel_speeds_pub.cpp
src/car_move_pkg/: package.xml  setup.cfg  setup.py
src/car_move_pkg/car_move_pkg/: USART.py  go_and_back.py
src/com_pkg/: CMakeLists.txt  package.xml
src/com_pkg/src/: com_amp.cpp  com_node.cpp  com_node_without_imu.cpp
src/i2c_pkg/: CMakeLists.txt
src/i2c_pkg/launch/: car_drive.launch.py
src/i2c_pkg/params/: car_drive.yaml
src/i2c_pkg/src/: TankDemo.py  car_drive.cpp  car_drive_pid.cpp  car_drive_pid_pwm.cpp  car_drive_pid_pwm_lifecycle.cpp  pid.cpp  pid_lifecycle.cpp  pid_velocity.cpp  pid_velocity_lifecycle.cpp  target_pub.cpp  velocity_by_encoder.cpp  velocity_by_encoder_lifecycle.cpp
src/item_locate_pkg/: CMakeLists.txt
src/item_locate_pkg/launch/: item_locate.launch.py
src/item_locate_pkg/src/: fov_measure.cpp  item_locate_node.cpp
src/lifecycle_control_pkg/: CMakeLists.txt
src/lifecycle_control_pkg/src/: lifecycle_control_node.cpp  lifecycle_control_node_2.cpp
src/lifecycle_controller/: CMakeLists.txt  package.xml
src/lifecycle_controller/src/: lifecycle_controller.cpp
src/mecanum_ros2_control/: CMakeLists.txt  README.md  mecanum_controller_plugins.xml  mecanum_hardware_interface_plugins.xml  package.xml
src/mecanum_ros2_control/config/: mecanum_controllers.yaml
src/mecanum_ros2_control/include/mecanum_ros2_control/: mecanum_controller.hpp  mecanum_hardware_interface.hpp
src/mecanum_ros2_control/launch/: mecanum_robot.launch.py  mecanum_robot_simple.launch.py  test_mecanum.py
src/mecanum_ros2_control/src/: mecanum_controller.cpp  mecanum_hardware_interface.cpp
src/mecanum_ros2_control/urdf/: mecanum_robot.urdf
src/my_carto_pkg/configuration_files/: amphi.lua
src/my_carto_pkg/launch/: .amphi_carto.launch.py.swp  amphi_carto.launch.py  amphi_final.launch.py  amphi_final_launch.py  fly_carto.launch.py  go_and_back.launch.py
src/pid_controller/: CMakeLists.txt  package.xml
src/pid_controller/include/: pid_controller.hpp
src/pid_controller/src/: control_node.cpp  control_node_lifecycle.cpp  pid_controller.cpp  target_pub.cpp
src/temp_cam_pkg/: CMakeLists.txt  package.xml
src/temp_cam_pkg/src/: temp_cam_driver_lifecycle.cpp
src/yolo_detect_pkg/: package.xml  setup.cfg  setup.py
src/yolo_detect_pkg/yolo_detect_pkg/: yolo11_detect.py  yolo11_detect_lifecycle.py  yolo11_detector.py
(+48 files in other folders)
