<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mecanum_ros2_control</name>
  <version>0.0.0</version>
  <description>ROS2 Control implementation for mecanum wheel robot</description>
  <maintainer email="sunrise@todo.todo">sunrise</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>control_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>diff_drive_controller</depend>
  <depend>robot_state_publisher</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>